--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
-  "files.associations": {
-    "stdio.h": "c"
-  }
+  "workbench.colorTheme": "Default Dark+",
+  "code-runner.runInTerminal": true,
+  "editor.accessibilitySupport": "off",
+  "editor.bracketPairColorization.enabled": true,
+  "editor.formatOnSave": true
+  
 }
